--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0",
-    "dotenv": "^16.0.0"
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security"
   }
 }
